{
    "name": "InputTouch",
    "maps": [
        {
            "name": "TouchInput",
            "id": "26a5c8c5-5f86-4bf2-b6b4-2a78d31eddbb",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "df287ed5-ab5b-4770-bd70-75d2089293a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "548f69a1-168e-4e99-a827-2ff43923b6bd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4fece6a-1dd4-4814-a5c1-8216787814ac",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45ecf656-f74e-4ef0-8f6c-98c7aa2bac62",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}